# PyThermalCamera

./: .gitignore  LICENSE  README.md  demo_library.py  pyproject.toml
.github/workflows/: check.yml  publish.yml
pythermalcamera/: __init__.py  __main__.py  camera.py
pythermalcamera.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
